fix(web): channel switch failure
Also add webui memory page

--- a/packages/web/src/i18n/locales/en.json
+++ b/packages/web/src/i18n/locales/en.json
@@ -80,6 +80,10 @@
     "passwordNotMatch": "The new passwords do not match",
     "passwordUpdated": "Password updated",
     "passwordUpdateFailed": "Failed to update password",
+    "changeEmail": "Change Email",
+    "emailRequired": "Email is required",
+    "emailUpdated": "Email updated",
+    "emailUpdateFailed": "Failed to update email",
     "linkedChannels": "Linked Platform Accounts",
     "noLinkedChannels": "No linked platform accounts yet",
     "bindCode": "Bind Code",
@@ -336,9 +340,9 @@
       "credentials": "Credentials",
       "saveSuccess": "Platform configuration saved",
       "saveFailed": "Failed to save platform configuration",
-    "requiredField": "{field} is required",
-    "save": "Save Platform Configuration",
-    "statusActive": "Active",
+      "requiredField": "{field} is required",
+      "save": "Save Platform Configuration",
+      "statusActive": "Active",
       "statusInactive": "Inactive",
       "deleteConfirm": "Are you sure you want to remove this platform?",
       "noAvailableTypes": "All platform types have been configured",
@@ -354,6 +358,30 @@
         "web": "Web",
         "local": "CLI"
       }
+    },
+    "memory": {
+      "title": "Here lie the memories.",
+      "files": "Memory Files",
+      "empty": "No memory entries found.",
+      "searchPlaceholder": "Search memory...",
+      "newMemory": "New Memory",
+      "compact": "Compact Memory",
+      "compactConfirm": "Are you sure you want to compact the memory? This will merge similar content using AI and may reduce the number of entries.",
+      "compactRatio": "Compression Ratio",
+      "compactRatioLight": "Light (0.8)",
+      "compactRatioMedium": "Medium (0.5)",
+      "compactRatioAggressive": "Aggressive (0.3)",
+      "compactRatioLightDesc": "Keep most details, mostly deduplicate.",
+      "compactRatioMediumDesc": "Merge similar facts, balanced compression.",
+      "compactRatioAggressiveDesc": "Heavily consolidate, keep core facts only.",
+      "compactDecayDate": "Target memories before this date",
+      "compactSuccess": "Memory compacted successfully",
+      "compactFailed": "Memory compaction failed",
+      "selectConversation": "Select Conversation",
+      "fromConversation": "Create from Conversation",
+      "noConversations": "No history conversations found",
+      "idCopied": "ID copied to clipboard",
+      "deleteConfirm": "Are you sure you want to delete this memory? This cannot be undone."
     }
   }
 }
