--- a/packages/web/src/i18n/locales/en.json
+++ b/packages/web/src/i18n/locales/en.json
@@ -307,6 +307,7 @@
       "container": "Container",
       "mcp": "MCP",
       "subagents": "Subagents",
+      "heartbeat": "Heartbeat",
       "history": "History",
       "skills": "Skills",
       "settings": "Settings"
@@ -374,6 +375,12 @@
       "reasoningEffortLow": "Low",
       "reasoningEffortMedium": "Medium",
       "reasoningEffortHigh": "High",
+      "heartbeatEnabled": "Enable Heartbeat",
+      "heartbeatDescription": "Periodically trigger agent to check for items that need attention",
+      "heartbeatInterval": "Heartbeat Interval (minutes)",
+      "heartbeatModel": "Heartbeat Model",
+      "heartbeatModelDescription": "Select a model for heartbeat checks. Defaults to the bot's chat model if not set.",
+      "heartbeatModelPlaceholder": "Use chat model (default)",
       "allowGuest": "Allow Guest Access",
       "allowGuestPersonalHint": "Personal bots do not support guest access. Use a public bot instead.",
       "searchModel": "Search models…",
@@ -463,6 +470,26 @@
       "saveSuccess": "Skill saved",
       "saveFailed": "Failed to save skill",
       "loadFailed": "Failed to load skills"
+    },
+    "heartbeat": {
+      "title": "Heartbeat Logs",
+      "loadFailed": "Failed to load heartbeat logs",
+      "empty": "No heartbeat logs",
+      "loadMore": "Load More",
+      "clearLogs": "Clear Logs",
+      "clearConfirm": "Are you sure you want to clear all heartbeat logs? This cannot be undone.",
+      "clearSuccess": "Heartbeat logs cleared",
+      "clearFailed": "Failed to clear heartbeat logs",
+      "status": "Status",
+      "time": "Time",
+      "duration": "Duration",
+      "result": "Result",
+      "error": "Error",
+      "statusOk": "OK",
+      "statusAlert": "Alert",
+      "statusError": "Error",
+      "filterAll": "All",
+      "noResult": "—"
     },
     "history": {
       "title": "History",
